sumo/tests/duarouter/flows/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of a flow is empty.
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid arrivalPos definition for vehicle 0.
Quitting (on error).
